[package]
name = "tauri-plugin-fs-watch"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.0.0-beta.8", features = [ "api-all" ] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
notify = "4.0"
