[package]
name = "tauri-plugin-fs-watch"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "Tauri Plugin to watch the filesystem for changes"
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1.0.0-rc.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
notify = "4.0"
